# QMusic

./: README.md
Music/: CMakeLists.txt  ffmpegwrapper.cpp  ffmpegwrapper.h  main.cpp  resources.qrc  videoplayer.cpp  videoplayer.h  videoplayer.ui
Music/ffmpeg-n4.4.4/doc/: developer.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  general.html  git-howto.html  mailing-list-faq.html
Music/ffmpeg-n4.4.4/include/libavutil/: ffversion.h
